# common_store

./: .gitignore  Dockerfile  Documentation.txt  README.md  b1975f88aad6_orders_and_banks.py  consumer.py  database.py  docker-compose.yml  email_utils.py  fixtures.py  main.py  notification_utils.py  pyproject.toml  rabbitmq.py  requirements.txt  schemas.py  smtp.py  telegram_notification_test.py  telegram_utils.py
migrations/versions/: 0e2bf9f1858b_store_tables.py  8ec78a8a6270_database_creation.py  9a1b4361da0d_cstore_init.py  c7a2036c3b1d_update_orders.py
models/: conftest.py  models.py  test_banks.py  test_orders.py  test_product.py
